# DayLens

./: .gitignore  README.md  git_log_output.txt  gitlog.txt  tmp_stats.json
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/application/: capture.rs  config.rs  mod.rs  ports.rs  query.rs  sync.rs
client/src-tauri/src/domain/: mod.rs
client/src-tauri/src/domain/activity/: classifier_service.rs  entity.rs  mod.rs  privacy_service.rs  value_objects.rs
client/src-tauri/src/domain/config/: entity.rs  mod.rs
client/src-tauri/src/domain/sync/: entity.rs  mod.rs  policy.rs
client/src-tauri/src/infrastructure/: mod.rs
client/src-tauri/src/infrastructure/capture/: browser_url.rs  idle_detector.rs  mod.rs  monitor.rs  ocr.rs  screen_lock.rs  screenshot.rs
client/src-tauri/src/infrastructure/persistence/: config_store.rs  file_storage.rs  mod.rs  sync_buffer.rs
client/src-tauri/src/infrastructure/remote/: client.rs  data_source.rs  mod.rs  uploader.rs  ws_client.rs
client/src-tauri/src/interface/: events.rs  mod.rs  state.rs
client/src-tauri/src/interface/commands/: activity.rs  config.rs  intelligence.rs  mod.rs  report.rs  search.rs  system.rs
client/src-tauri/src/shared/: error.rs  mod.rs
client/src/hooks/: useEventListener.ts  useInvoke.ts
client/src/stores/: logStore.ts  systemStore.ts  themeStore.ts
server/: .dockerignore  .golangci.yml  Dockerfile  config.yaml  docker-compose.yml  go.mod  go.sum  nginx.conf
server/config/: config.go
server/migrations/: 001_init.down.sql  001_init.up.sql
(+85 files in other folders)
